--- a/santander-dev-week-2023/src/main/resources/application.properties
+++ b/santander-dev-week-2023/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=santander-dev-week-2023
 spring.datasource.url=jdbc:h2:mem:sdw2023
-spring.datasource.username=sdw2023
-spring.datasource.password=
+spring.datasource.username=brenomax
+spring.datasource.password=brenomax
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=create
